force-app/main/default/objects/Interview__c/fields/Candidate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>