force-app/main/default/objects/Interview__c/fields/I_would_like_to_apply_to_this_position__c.field-meta.xml
<CustomField>
    <fullName>I_would_like_to_apply_to_this_position__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check the box to submit application.</inlineHelpText>
    <label>I would like to apply to this position</label>
    <type>Checkbox</type>
</CustomField>