force-app/main/default/objects/Interview__c/fields/Partners_Teachers_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Partners_Teachers_Interviews__c</fullName>
    <description>Checks to see if the candidate (Teacher Contact) is under the current partner user.</description>
    <formula>OR(
(
CASESAFEID( Opportunity__r.AccountId ) =  $User.Account_Id__c
),
( 
CASESAFEID( Candidate_Contact__r.AccountId ) =  $User.Account_Id__c  
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partners Teachers Interviews</label>
    <type>Checkbox</type>
</CustomField>