force-app/main/default/objects/Interview__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Applied</fullName>
            </value>
            <value>
                <fullName>Interview 1</fullName>
            </value>
            <value>
                <fullName>Interview 2</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Already Position Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>