force-app/main/default/objects/Interview__c/listViews/Partners_My_Teachers_Placement_Status.listView-meta.xml
<ListView>
    <fullName>Partners_My_Teachers_Placement_Status</fullName>
    <columns>Positions__c</columns>
    <columns>School__c</columns>
    <columns>Candidate_Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Interview_1_Date__c</columns>
    <columns>Interview_2_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partners_Teachers_Interviews__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Partners - My Teachers Placement Status</label>
</ListView>